# TOAextractor

./: .buildinfo  .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: check_docs.yml  ci_cron_weekly.yml  ci_tests.yml  publish_docs.yml
_sources/toa_extractor/: index.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
licenses/: LICENSE.rst
toa_extractor/: __init__.py  _astropy_init.py  conftest.py  data_setup.py  index.html  pipeline.py  plotting.py  status.py  summary.py  toa_stats.py
toa_extractor/data/: crab_512.ecsv  crab_nustar_cr250.ecsv  jb_crab_glitches.ecsv  templates.yaml
toa_extractor/tests/: test_pipeline.py  test_toa_stats.py
toa_extractor/tests/data/: astrosat_test.fits  nicer_test.evt
toa_extractor/utils/: __init__.py  base.py  config.py  crab.py  data_manipulation.py  fit_crab_profiles.py  fold.py
toa_extractor/utils/tests/: test_base.py  test_crab.py  test_fit_crab_profiles.py
