[metadata]
name = toa_extractor
author = Matteo Bachetti
author_email = matteo@matteobachetti.it
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = github.com/matteobachetti/toa_extractor
description = Calculate TOAs and residuals of pulsars
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = matteobachetti/toa_extractor

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numba
    numpy
    scipy
    statsmodels
    astropy
    matplotlib
    uncertainties
    luigi
    pyyaml
    stingray
    pint-pulsar


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
toa_extractor = data/*

[tool:pytest]
testpaths = "toa_extractor" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    toa_extractor/_astropy_init*
    toa_extractor/conftest.py
    toa_extractor/*setup_package*
    toa_extractor/tests/*
    toa_extractor/*/tests/*
    toa_extractor/extern/*
    toa_extractor/version*
    */toa_extractor/_astropy_init*
    */toa_extractor/conftest.py
    */toa_extractor/*setup_package*
    */toa_extractor/tests/*
    */toa_extractor/*/tests/*
    */toa_extractor/extern/*
    */toa_extractor/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[options.entry_points]
console_scripts =
    toaextract = toa_extractor.pipeline:main